--- a/jira_pm_analyses.ipynb
+++ b/jira_pm_analyses.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,40 +45,165 @@
     "end_dates = users['DATE_CREATED'].tolist();\n",
     "end_dates.pop(0)\n",
     "end_dates.append('null')\n",
-    "new_users = users.assign(END_DATES = pd.Series(end_dates))\n",
+    "users = users.assign(END_DATES = pd.Series(end_dates))\n",
     "#print(users.groupby('KEY').tail(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-c07b5345ea92>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0moldvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_users\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnew_users\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0moldvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mKEY\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mKEY\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mnew_users\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'END_DATES'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'D'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1119\u001b[0m         raise ValueError(\"The truth value of a {0} is ambiguous. \"\n\u001b[0;32m   1120\u001b[0m                          \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1121\u001b[1;33m                          .format(self.__class__.__name__))\n\u001b[0m\u001b[0;32m   1122\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1123\u001b[0m     \u001b[0m__bool__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             KEY  AUTHOR_NAME         DATE_CREATED               OLD_VALUE  \\\n",
+      "0    RMSODS-4179         pr10  31.10.2017 10:13:32           To Be Refined   \n",
+      "1    RMSODS-4179         pr10   15.11.2017 8:57:19               In Refine   \n",
+      "2    RMSODS-4179         IC16   16.11.2017 9:26:13         Ready for Build   \n",
+      "3    RMSODS-4179         IC16    23.11.2017 8:38:0                In Build   \n",
+      "4    RMSODS-4179         IC16   23.11.2017 9:20:37                 In Test   \n",
+      "5    RMSODS-4179         IC16   24.11.2017 9:21:27    Ready for Deployment   \n",
+      "6    RMSODS-4072         IC16     12.9.2017 13:8:9  Sub-task To Be Refined   \n",
+      "7    RMSODS-4072         FC82     2.10.2017 1:8:21         Ready for Build   \n",
+      "8    RMSODS-4072         FC82    5.10.2017 8:31:24    Ready for Deployment   \n",
+      "9    RMSODS-4072         FC82     5.10.2017 8:34:2  Deployed, Not Complete   \n",
+      "10   RMSODS-4064         FC82  25.12.2017 15:45:48  Sub-task To Be Refined   \n",
+      "11   RMSODS-4064         FC82  25.12.2017 15:47:44               In Refine   \n",
+      "12   RMSODS-4064         FC82  25.12.2017 15:58:24         Ready for Build   \n",
+      "13   RMSODS-4064  UKE12358486   28.12.2017 8:50:19                In Build   \n",
+      "14   RMSODS-4064         FC82    10.1.2018 9:14:46    Ready for Deployment   \n",
+      "15   RMSODS-4064         FC82    10.1.2018 9:14:56  Deployed, Not Complete   \n",
+      "16   RMSODS-4063         IB19     1.9.2017 14:5:54  Sub-task To Be Refined   \n",
+      "17   RMSODS-4063         KC51      4.9.2017 9:14:2               In Refine   \n",
+      "18   RMSODS-4063         pr10     7.9.2017 14:4:45           Sub-task Done   \n",
+      "19   RMSODS-4058         IB19   31.8.2017 17:44:56  Sub-task To Be Refined   \n",
+      "20   RMSODS-4058         hdg2    1.9.2017 10:41:21                 In Test   \n",
+      "21   RMSODS-4055         IB19    4.9.2017 22:29:58  Sub-task To Be Refined   \n",
+      "22   RMSODS-4045         pr10   11.9.2017 16:12:38           To Be Refined   \n",
+      "23   RMSODS-4045  UKE12358486    13.9.2017 8:53:33               In Refine   \n",
+      "24   RMSODS-4045         IC16    18.9.2017 7:28:18         Ready for Build   \n",
+      "25   RMSODS-4045         IC16  16.10.2017 17:30:56  Deployed, Not Complete   \n",
+      "26   RMSODS-4043         IB19    23.8.2017 10:2:35  Sub-task To Be Refined   \n",
+      "27   RMSODS-4043         hdg2    24.8.2017 9:46:15                In Build   \n",
+      "28   RMSODS-4043         hdg2   24.8.2017 13:27:33           Sub-task Done   \n",
+      "29   RMSODS-4038         IB19   22.8.2017 15:45:18  Sub-task To Be Refined   \n",
+      "..           ...          ...                  ...                     ...   \n",
+      "884     PRIC-206         YZ52    15.4.2015 8:11:52               In Refine   \n",
+      "885     PRIC-206         YZ52    22.4.2015 7:42:22         Ready for Build   \n",
+      "886     PRIC-206         pr10   20.2.2017 13:41:44           To Be Refined   \n",
+      "887      GIRE-19         IC16    14.12.2017 14:2:8  Sub-task To Be Refined   \n",
+      "888      GIRE-19         IC16    18.12.2017 8:6:39               In Refine   \n",
+      "889      GIRE-19         IC16    18.12.2017 10:1:0                 In Test   \n",
+      "890      GIRE-19         IC16  21.12.2017 10:32:28    Ready for Deployment   \n",
+      "891       GIRE-8         IC16  21.12.2017 10:27:34           To Be Refined   \n",
+      "892       GIRE-8         IC16   21.12.2017 12:5:53               In Refine   \n",
+      "893       GIRE-8         IC16  27.12.2017 14:11:47                In Build   \n",
+      "894       GIRE-8         IC16    10.1.2018 8:45:18    Ready for Deployment   \n",
+      "895       GIRE-8         IC16    18.1.2018 6:10:32  Deployed, Not Complete   \n",
+      "896       GIRE-6         IC16   12.12.2017 11:7:45           To Be Refined   \n",
+      "897       GIRE-6         EAD7   29.12.2017 14:7:18               In Refine   \n",
+      "898       GIRE-5         NX34  30.10.2017 10:57:37           To Be Refined   \n",
+      "899       GIRE-5         FC82   30.10.2017 16:40:4         Ready for Build   \n",
+      "900       GIRE-5         FC82   31.10.2017 13:59:0                 In Test   \n",
+      "901       GIRE-5         FC82   31.10.2017 14:3:31  Deployed, Not Complete   \n",
+      "902       GIRE-4         NX34   26.10.2017 11:1:31           To Be Refined   \n",
+      "903       GIRE-4         FC82   26.10.2017 14:20:2         Ready for Build   \n",
+      "904       GIRE-4         FC82  26.10.2017 16:12:14                In Build   \n",
+      "905       GIRE-4         FC82  30.10.2017 10:19:22                 In Test   \n",
+      "906       GIRE-4         FC82   30.10.2017 10:22:6  Deployed, Not Complete   \n",
+      "907       GIRE-1         NX34  26.10.2017 10:39:51           To Be Refined   \n",
+      "908       GIRE-1         IC16  12.12.2017 10:51:42         Ready for Build   \n",
+      "909       GIRE-1         IC16  26.12.2017 10:35:52                In Build   \n",
+      "910       GIRE-1         IC16     10.1.2018 9:4:11                In Build   \n",
+      "911       GIRE-1         IC16     10.1.2018 9:4:18                In Build   \n",
+      "912       GIRE-1         IC16   10.1.2018 14:49:23    Ready for Deployment   \n",
+      "913       GIRE-1         IC16   15.1.2018 10:57:14  Deployed, Not Complete   \n",
+      "\n",
+      "                  NEW_VALUE            END_DATES  \n",
+      "0                 In Refine   15.11.2017 8:57:19  \n",
+      "1           Ready for Build   16.11.2017 9:26:13  \n",
+      "2                  In Build    23.11.2017 8:38:0  \n",
+      "3                   In Test   23.11.2017 9:20:37  \n",
+      "4      Ready for Deployment   24.11.2017 9:21:27  \n",
+      "5                      Done   24.11.2017 9:21:27  \n",
+      "6           Ready for Build     2.10.2017 1:8:21  \n",
+      "7      Ready for Deployment    5.10.2017 8:31:24  \n",
+      "8    Deployed, Not Complete     5.10.2017 8:34:2  \n",
+      "9             Sub-task Done     5.10.2017 8:34:2  \n",
+      "10                In Refine  25.12.2017 15:47:44  \n",
+      "11          Ready for Build  25.12.2017 15:58:24  \n",
+      "12                 In Build   28.12.2017 8:50:19  \n",
+      "13     Ready for Deployment    10.1.2018 9:14:46  \n",
+      "14   Deployed, Not Complete    10.1.2018 9:14:56  \n",
+      "15            Sub-task Done    10.1.2018 9:14:56  \n",
+      "16                In Refine      4.9.2017 9:14:2  \n",
+      "17            Sub-task Done     7.9.2017 14:4:45  \n",
+      "18            Sub-task Done     7.9.2017 14:4:45  \n",
+      "19                  In Test    1.9.2017 10:41:21  \n",
+      "20            Sub-task Done    1.9.2017 10:41:21  \n",
+      "21            Sub-task Done    4.9.2017 22:29:58  \n",
+      "22                In Refine    13.9.2017 8:53:33  \n",
+      "23          Ready for Build    18.9.2017 7:28:18  \n",
+      "24   Deployed, Not Complete  16.10.2017 17:30:56  \n",
+      "25                     Done  16.10.2017 17:30:56  \n",
+      "26                 In Build    24.8.2017 9:46:15  \n",
+      "27            Sub-task Done   24.8.2017 13:27:33  \n",
+      "28            Sub-task Done   24.8.2017 13:27:33  \n",
+      "29                 In Build   23.8.2017 11:28:31  \n",
+      "..                      ...                  ...  \n",
+      "884         Ready for Build    22.4.2015 7:42:22  \n",
+      "885           To Be Refined   20.2.2017 13:41:44  \n",
+      "886                    Done   20.2.2017 13:41:44  \n",
+      "887               In Refine    18.12.2017 8:6:39  \n",
+      "888                 In Test    18.12.2017 10:1:0  \n",
+      "889    Ready for Deployment  21.12.2017 10:32:28  \n",
+      "890           Sub-task Done  21.12.2017 10:32:28  \n",
+      "891               In Refine   21.12.2017 12:5:53  \n",
+      "892                In Build  27.12.2017 14:11:47  \n",
+      "893    Ready for Deployment    10.1.2018 8:45:18  \n",
+      "894  Deployed, Not Complete    18.1.2018 6:10:32  \n",
+      "895                    Done    18.1.2018 6:10:32  \n",
+      "896               In Refine   29.12.2017 14:7:18  \n",
+      "897                    Done   29.12.2017 14:7:18  \n",
+      "898         Ready for Build   30.10.2017 16:40:4  \n",
+      "899                 In Test   31.10.2017 13:59:0  \n",
+      "900  Deployed, Not Complete   31.10.2017 14:3:31  \n",
+      "901                    Done   31.10.2017 14:3:31  \n",
+      "902         Ready for Build   26.10.2017 14:20:2  \n",
+      "903                In Build  26.10.2017 16:12:14  \n",
+      "904                 In Test  30.10.2017 10:19:22  \n",
+      "905  Deployed, Not Complete   30.10.2017 10:22:6  \n",
+      "906                    Done   30.10.2017 10:22:6  \n",
+      "907         Ready for Build  12.12.2017 10:51:42  \n",
+      "908                In Build  26.12.2017 10:35:52  \n",
+      "909                In Build     10.1.2018 9:4:11  \n",
+      "910                In Build     10.1.2018 9:4:18  \n",
+      "911    Ready for Deployment   10.1.2018 14:49:23  \n",
+      "912  Deployed, Not Complete   15.1.2018 10:57:14  \n",
+      "913                    Done   15.1.2018 10:57:14  \n",
+      "\n",
+      "[914 rows x 6 columns]\n"
      ]
     }
    ],
    "source": [
-    "oldvalue = new_users.iloc[[0]]\n",
-    "for index, row in new_users.iterrows():\n",
-    "    if oldvalue.KEY != row.KEY:\n",
-    "        print(index-1, row,sep='\\n')\n",
-    "        new_users['END_DATES'].replace([int(index)-1], 'D')\n",
-    "        #users.index[index-1].row['END_DATES'] = users.index[index-1].row['DATE_CREATED']\n",
+    "oldvalue = users.iloc[0]\n",
+    "for index, row in users.iterrows():\n",
+    "    #print(oldvalue.KEY,row.KEY,sep='\\n')\n",
+    "    if oldvalue.KEY != row.KEY :\n",
+    "        #print(index-1, row,sep='\\n')\n",
+    "        users.loc[users.index[index-1],'END_DATES'] = users.loc[users.index[index-1],'DATE_CREATED']\n",
+    "\n",
+    "#        users.index[index-1].row['END_DATES'] = users.index[index-1].row['DATE_CREATED']\n",
     "        #print(users.get_value(index-1,'END_DATES'), users.get_value(index-1,'DATE_CREATED'))\n",
-    "        print(new_users.at[str(index-1), 'END_DATES'], new_users.at[str(index-1), 'DATE_CREATED'])\n",
-    "    if row[END_DATES] == 'null':\n",
-    "        row['END_DATES'] = row['DATE_CREATED']\n",
-    "    oldvalue=row"
+    "        #print(users.at[index-1, 'END_DATES'], users.at[index-1, 'DATE_CREATED'])\n",
+    "    #if row['END_DATES'] == 'null':\n",
+    "    #    row['END_DATES'] = row['DATE_CREATED']   \n",
+    "    oldvalue=row\n",
+    "users.loc[users.index[len(users)-1],'END_DATES'] = users.loc[users.index[len(users)-1],'DATE_CREATED']    \n",
+    "print(users)"
    ]
   },
   {
