--- a/jira_pm_analyses.ipynb
+++ b/jira_pm_analyses.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,18 +190,11 @@
     }
    ],
    "source": [
+    "#set last end_date for each story as a last update date of the story\n",
     "oldvalue = users.iloc[0]\n",
     "for index, row in users.iterrows():\n",
-    "    #print(oldvalue.KEY,row.KEY,sep='\\n')\n",
     "    if oldvalue.KEY != row.KEY :\n",
-    "        #print(index-1, row,sep='\\n')\n",
-    "        users.loc[users.index[index-1],'END_DATES'] = users.loc[users.index[index-1],'DATE_CREATED']\n",
-    "\n",
-    "#        users.index[index-1].row['END_DATES'] = users.index[index-1].row['DATE_CREATED']\n",
-    "        #print(users.get_value(index-1,'END_DATES'), users.get_value(index-1,'DATE_CREATED'))\n",
-    "        #print(users.at[index-1, 'END_DATES'], users.at[index-1, 'DATE_CREATED'])\n",
-    "    #if row['END_DATES'] == 'null':\n",
-    "    #    row['END_DATES'] = row['DATE_CREATED']   \n",
+    "        users.loc[users.index[index-1],'END_DATES'] = users.loc[users.index[index-1],'DATE_CREATED']  \n",
     "    oldvalue=row\n",
     "users.loc[users.index[len(users)-1],'END_DATES'] = users.loc[users.index[len(users)-1],'DATE_CREATED']    \n",
     "print(users)"
@@ -208,151 +202,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             KEY  AUTHOR_NAME         DATE_CREATED               OLD_VALUE  \\\n",
-      "0    RMSODS-4179         pr10  31.10.2017 10:13:32           To Be Refined   \n",
-      "1    RMSODS-4179         pr10   15.11.2017 8:57:19               In Refine   \n",
-      "2    RMSODS-4179         IC16   16.11.2017 9:26:13         Ready for Build   \n",
-      "3    RMSODS-4179         IC16    23.11.2017 8:38:0                In Build   \n",
-      "4    RMSODS-4179         IC16   23.11.2017 9:20:37                 In Test   \n",
-      "5    RMSODS-4179         IC16   24.11.2017 9:21:27    Ready for Deployment   \n",
-      "6    RMSODS-4072         IC16     12.9.2017 13:8:9  Sub-task To Be Refined   \n",
-      "7    RMSODS-4072         FC82     2.10.2017 1:8:21         Ready for Build   \n",
-      "8    RMSODS-4072         FC82    5.10.2017 8:31:24    Ready for Deployment   \n",
-      "9    RMSODS-4072         FC82     5.10.2017 8:34:2  Deployed, Not Complete   \n",
-      "10   RMSODS-4064         FC82  25.12.2017 15:45:48  Sub-task To Be Refined   \n",
-      "11   RMSODS-4064         FC82  25.12.2017 15:47:44               In Refine   \n",
-      "12   RMSODS-4064         FC82  25.12.2017 15:58:24         Ready for Build   \n",
-      "13   RMSODS-4064  UKE12358486   28.12.2017 8:50:19                In Build   \n",
-      "14   RMSODS-4064         FC82    10.1.2018 9:14:46    Ready for Deployment   \n",
-      "15   RMSODS-4064         FC82    10.1.2018 9:14:56  Deployed, Not Complete   \n",
-      "16   RMSODS-4063         IB19     1.9.2017 14:5:54  Sub-task To Be Refined   \n",
-      "17   RMSODS-4063         KC51      4.9.2017 9:14:2               In Refine   \n",
-      "18   RMSODS-4063         pr10     7.9.2017 14:4:45           Sub-task Done   \n",
-      "19   RMSODS-4058         IB19   31.8.2017 17:44:56  Sub-task To Be Refined   \n",
-      "20   RMSODS-4058         hdg2    1.9.2017 10:41:21                 In Test   \n",
-      "21   RMSODS-4055         IB19    4.9.2017 22:29:58  Sub-task To Be Refined   \n",
-      "22   RMSODS-4045         pr10   11.9.2017 16:12:38           To Be Refined   \n",
-      "23   RMSODS-4045  UKE12358486    13.9.2017 8:53:33               In Refine   \n",
-      "24   RMSODS-4045         IC16    18.9.2017 7:28:18         Ready for Build   \n",
-      "25   RMSODS-4045         IC16  16.10.2017 17:30:56  Deployed, Not Complete   \n",
-      "26   RMSODS-4043         IB19    23.8.2017 10:2:35  Sub-task To Be Refined   \n",
-      "27   RMSODS-4043         hdg2    24.8.2017 9:46:15                In Build   \n",
-      "28   RMSODS-4043         hdg2   24.8.2017 13:27:33           Sub-task Done   \n",
-      "29   RMSODS-4038         IB19   22.8.2017 15:45:18  Sub-task To Be Refined   \n",
-      "..           ...          ...                  ...                     ...   \n",
-      "884     PRIC-206         YZ52    15.4.2015 8:11:52               In Refine   \n",
-      "885     PRIC-206         YZ52    22.4.2015 7:42:22         Ready for Build   \n",
-      "886     PRIC-206         pr10   20.2.2017 13:41:44           To Be Refined   \n",
-      "887      GIRE-19         IC16    14.12.2017 14:2:8  Sub-task To Be Refined   \n",
-      "888      GIRE-19         IC16    18.12.2017 8:6:39               In Refine   \n",
-      "889      GIRE-19         IC16    18.12.2017 10:1:0                 In Test   \n",
-      "890      GIRE-19         IC16  21.12.2017 10:32:28    Ready for Deployment   \n",
-      "891       GIRE-8         IC16  21.12.2017 10:27:34           To Be Refined   \n",
-      "892       GIRE-8         IC16   21.12.2017 12:5:53               In Refine   \n",
-      "893       GIRE-8         IC16  27.12.2017 14:11:47                In Build   \n",
-      "894       GIRE-8         IC16    10.1.2018 8:45:18    Ready for Deployment   \n",
-      "895       GIRE-8         IC16    18.1.2018 6:10:32  Deployed, Not Complete   \n",
-      "896       GIRE-6         IC16   12.12.2017 11:7:45           To Be Refined   \n",
-      "897       GIRE-6         EAD7   29.12.2017 14:7:18               In Refine   \n",
-      "898       GIRE-5         NX34  30.10.2017 10:57:37           To Be Refined   \n",
-      "899       GIRE-5         FC82   30.10.2017 16:40:4         Ready for Build   \n",
-      "900       GIRE-5         FC82   31.10.2017 13:59:0                 In Test   \n",
-      "901       GIRE-5         FC82   31.10.2017 14:3:31  Deployed, Not Complete   \n",
-      "902       GIRE-4         NX34   26.10.2017 11:1:31           To Be Refined   \n",
-      "903       GIRE-4         FC82   26.10.2017 14:20:2         Ready for Build   \n",
-      "904       GIRE-4         FC82  26.10.2017 16:12:14                In Build   \n",
-      "905       GIRE-4         FC82  30.10.2017 10:19:22                 In Test   \n",
-      "906       GIRE-4         FC82   30.10.2017 10:22:6  Deployed, Not Complete   \n",
-      "907       GIRE-1         NX34  26.10.2017 10:39:51           To Be Refined   \n",
-      "908       GIRE-1         IC16  12.12.2017 10:51:42         Ready for Build   \n",
-      "909       GIRE-1         IC16  26.12.2017 10:35:52                In Build   \n",
-      "910       GIRE-1         IC16     10.1.2018 9:4:11                In Build   \n",
-      "911       GIRE-1         IC16     10.1.2018 9:4:18                In Build   \n",
-      "912       GIRE-1         IC16   10.1.2018 14:49:23    Ready for Deployment   \n",
-      "913       GIRE-1         IC16   15.1.2018 10:57:14  Deployed, Not Complete   \n",
-      "\n",
-      "                  NEW_VALUE  \n",
-      "0                 In Refine  \n",
-      "1           Ready for Build  \n",
-      "2                  In Build  \n",
-      "3                   In Test  \n",
-      "4      Ready for Deployment  \n",
-      "5                      Done  \n",
-      "6           Ready for Build  \n",
-      "7      Ready for Deployment  \n",
-      "8    Deployed, Not Complete  \n",
-      "9             Sub-task Done  \n",
-      "10                In Refine  \n",
-      "11          Ready for Build  \n",
-      "12                 In Build  \n",
-      "13     Ready for Deployment  \n",
-      "14   Deployed, Not Complete  \n",
-      "15            Sub-task Done  \n",
-      "16                In Refine  \n",
-      "17            Sub-task Done  \n",
-      "18            Sub-task Done  \n",
-      "19                  In Test  \n",
-      "20            Sub-task Done  \n",
-      "21            Sub-task Done  \n",
-      "22                In Refine  \n",
-      "23          Ready for Build  \n",
-      "24   Deployed, Not Complete  \n",
-      "25                     Done  \n",
-      "26                 In Build  \n",
-      "27            Sub-task Done  \n",
-      "28            Sub-task Done  \n",
-      "29                 In Build  \n",
-      "..                      ...  \n",
-      "884         Ready for Build  \n",
-      "885           To Be Refined  \n",
-      "886                    Done  \n",
-      "887               In Refine  \n",
-      "888                 In Test  \n",
-      "889    Ready for Deployment  \n",
-      "890           Sub-task Done  \n",
-      "891               In Refine  \n",
-      "892                In Build  \n",
-      "893    Ready for Deployment  \n",
-      "894  Deployed, Not Complete  \n",
-      "895                    Done  \n",
-      "896               In Refine  \n",
-      "897                    Done  \n",
-      "898         Ready for Build  \n",
-      "899                 In Test  \n",
-      "900  Deployed, Not Complete  \n",
-      "901                    Done  \n",
-      "902         Ready for Build  \n",
-      "903                In Build  \n",
-      "904                 In Test  \n",
-      "905  Deployed, Not Complete  \n",
-      "906                    Done  \n",
-      "907         Ready for Build  \n",
-      "908                In Build  \n",
-      "909                In Build  \n",
-      "910                In Build  \n",
-      "911    Ready for Deployment  \n",
-      "912  Deployed, Not Complete  \n",
-      "913                    Done  \n",
-      "\n",
-      "[914 rows x 5 columns]\n"
+      "0      14 days 22:43:47\n",
+      "1       1 days 00:28:54\n",
+      "2       6 days 23:11:47\n",
+      "3       0 days 00:42:37\n",
+      "4       1 days 00:00:50\n",
+      "5       0 days 00:00:00\n",
+      "6      19 days 12:00:12\n",
+      "7       3 days 07:23:03\n",
+      "8       0 days 00:02:38\n",
+      "9       0 days 00:00:00\n",
+      "10      0 days 00:01:56\n",
+      "11      0 days 00:10:40\n",
+      "12      2 days 16:51:55\n",
+      "13     13 days 00:24:27\n",
+      "14      0 days 00:00:10\n",
+      "15      0 days 00:00:00\n",
+      "16      2 days 19:08:08\n",
+      "17      3 days 04:50:43\n",
+      "18      0 days 00:00:00\n",
+      "19      0 days 16:56:25\n",
+      "20      0 days 00:00:00\n",
+      "21      0 days 00:00:00\n",
+      "22      1 days 16:40:55\n",
+      "23      4 days 22:34:45\n",
+      "24     28 days 10:02:38\n",
+      "25      0 days 00:00:00\n",
+      "26      0 days 23:43:40\n",
+      "27      0 days 03:41:18\n",
+      "28      0 days 00:00:00\n",
+      "29      0 days 19:43:13\n",
+      "             ...       \n",
+      "884     6 days 23:30:30\n",
+      "885   670 days 05:59:22\n",
+      "886     0 days 00:00:00\n",
+      "887     3 days 18:04:31\n",
+      "888     0 days 01:54:21\n",
+      "889     3 days 00:31:28\n",
+      "890     0 days 00:00:00\n",
+      "891     0 days 01:38:19\n",
+      "892     6 days 02:05:54\n",
+      "893    13 days 18:33:31\n",
+      "894     7 days 21:25:14\n",
+      "895     0 days 00:00:00\n",
+      "896    17 days 02:59:33\n",
+      "897     0 days 00:00:00\n",
+      "898     0 days 05:42:27\n",
+      "899     0 days 21:18:56\n",
+      "900     0 days 00:04:31\n",
+      "901     0 days 00:00:00\n",
+      "902     0 days 03:18:31\n",
+      "903     0 days 01:52:12\n",
+      "904     3 days 18:07:08\n",
+      "905     0 days 00:02:44\n",
+      "906     0 days 00:00:00\n",
+      "907    47 days 00:11:51\n",
+      "908    13 days 23:44:10\n",
+      "909    14 days 22:28:19\n",
+      "910     0 days 00:00:07\n",
+      "911     0 days 05:45:05\n",
+      "912     4 days 20:07:51\n",
+      "913     0 days 00:00:00\n",
+      "Length: 914, dtype: timedelta64[ns]\n"
      ]
     }
    ],
    "source": [
-    "print(users)\n",
+    "time_diff = users['END_DATES']\n",
+    "time = users[['DATE_CREATED','END_DATES']].apply(lambda x: datetime.strptime(x['END_DATES'],'%d.%m.%Y %H:%M:%S') - datetime.strptime(x['DATE_CREATED'],'%d.%m.%Y %H:%M:%S'), axis=1)\n",
+    "time = []\n",
+    "print()\n",
+    "#datetime_object = datetime.strptime('Jun 1 2005  1:33PM', '%d.%m.%Y %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "grouped_list = users.groupby('KEY').size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +303,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-0fea3733afe2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrouped_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'KEY'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-0fea3733afe2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrouped_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'KEY'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36msort_values\u001b[1;34m(self, axis, ascending, inplace, kind, na_position)\u001b[0m\n\u001b[0;32m   1877\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1878\u001b[0m         \u001b[0minplace\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalidate_bool_kwarg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'inplace'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1879\u001b[1;33m         \u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1880\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1881\u001b[0m         \u001b[1;31m# GH 5856/5853\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_get_axis_number\u001b[1;34m(self, axis)\u001b[0m\n\u001b[0;32m    355\u001b[0m                 \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    356\u001b[0m         raise ValueError('No axis named {0} for object type {1}'\n\u001b[1;32m--> 357\u001b[1;33m                          .format(axis, type(self)))\n\u001b[0m\u001b[0;32m    358\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    359\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_get_axis_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: No axis named KEY for object type <class 'pandas.core.series.Series'>"
